--- a/src/Weather.css
+++ b/src/Weather.css
@@ -32,6 +32,12 @@ li {
   max-width: 600px;
 }
 
+.Weather canvas {
+  margin-right: 10px;
+  margin-top: 5px;
+  display: inline;
+}
+
 .temperature {
   color: rgb(33, 33, 33);
   font-size: 64px;
